--- a/src/main/resources/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
+++ b/src/main/resources/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
@@ -8,7 +8,7 @@
 <div class="tabs">
     <a href="#/etusivu" class="tab"><span>{{ t('common.etusivu') || 'Valintaryhmät ja hakukohteet' }}</span></a>
     <a href="#/laskentakaava" class="tab current"><span>{{ t('common.laskentakaava') || 'Laskentakaavat' }}</span></a>
-    <a auth ng-if="userAccess.crudOph || (userAccess.hasCrudRights() && userModel.isKKUser)" href="#/import" class="tab float-right"><span>{{ t('common.import') || 'Yhteisvalinnan hallinta' }}</span></a>
+    <a auth="yhteisvalinta" ng-if="userAccess.crudOph || (userAccess.hasCrudRights() && userModel.isKKUser) || userModel.hasYhteisvalintaRights" href="#/import" class="tab float-right"><span>{{ t('common.import') || 'Yhteisvalinnan hallinta' }}</span></a>
 </div>
 
 <div class="tabsheets">
