OY-5446: Allow hakemus/kouta/valintojen toteuttaminen roles for year inserting

--- a/src/main/resources/webapp/app/valintaryhma/valintaryhmalomake_uusi.html
+++ b/src/main/resources/webapp/app/valintaryhma/valintaryhmalomake_uusi.html
@@ -43,7 +43,7 @@
             <label class="control-label col-md-2" for="hakuvuosi">{{ t('valintaryhmalomake.hakuvuosi') || 'Hakuvuosi' }}</label>
 
             <div class="col-md-6">
-                <input auth="yhteisvalinta" ng-disabled="!userAccess.updateOrg" class="form-control"
+                <input auth="yhteisvalinta" ng-disabled="!userAccess.updateOrg && !userModel.hasYhteisvalintaRights" class="form-control"
                        type="text" id="hakuvuosi" ng-model="model.valintaryhma.hakuvuosi" />
             </div>
         </div>
